# j-code-android

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build-warnings.txt  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts  wd.xml
.githooks/: pre-commit
.github/workflows/: ci.yml  no-host-root.yml
app/: build.gradle.kts
app/src/androidTest/java/dev/jcode/: NativeLibrariesSmokeTest.kt  SyntaxHighlighterDifferentialTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/builtin-extensions/: jcode.ext.gitscm-0.4.0.jext  jcode.ext.gitscm-0.5.0.jext  jcode.ext.gitscm-0.5.1.jext  jcode.lang.markup-1.0.1.jext  jcode.lang.stylesheet-1.0.1.jext
app/src/main/java/dev/jcode/: AppUpdateInstaller.kt  BackendService.kt  CommandPalette.kt  DebugSessionPanel.kt  IssuesPanel.kt  JCodeShell.kt  MainActivity.kt  MainViewModel.kt  MonoFontCatalog.kt  OutputLog.kt  PaletteCommandsUi.kt  RunDebugPanel.kt  SessionStore.kt  SettingsBackup.kt  TaskManagerPanel.kt  TerminalSessionHost.kt  ToolchainManagerPanel.kt  UpdateChecker.kt  WorkbenchStatusBar.kt
app/src/main/java/dev/jcode/backend/: SessionRegistry.kt
app/src/main/java/dev/jcode/debug/: DebugController.kt
app/src/main/java/dev/jcode/editor/: CodeFormatter.kt  LanguagePackCompletions.kt  MarkdownHtml.kt  SyntaxHighlighter.kt
app/src/main/java/dev/jcode/provider/: ProjectsDocumentsProvider.kt
app/src/main/java/dev/jcode/run/: BuildConfigPage.kt  ProjectRunner.kt  RunConfigPage.kt
app/src/main/java/dev/jcode/workbench/: AgentChatPanel.kt  BrowserPage.kt  BuiltinBrowser.kt  DevToolsPanel.kt  ExtensionDevLog.kt  ExtensionDevPanel.kt  ExtensionWebView.kt  ImageViewerPage.kt  MarkdownPreviewPage.kt  ScmExtensionHost.kt  SearchToolPanel.kt  SetupTerminalRunner.kt  WorkbenchChrome.kt  WorkbenchChromeBars.kt  WorkbenchExtraKeys.kt  WorkbenchModel.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_bg_beta.xml  ic_launcher_bg_debug.xml  ic_launcher_foreground.xml  splash_screen.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_beta.xml  ic_launcher_debug.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
core/adaptive/: build.gradle.kts
core/buffer/: build.gradle.kts
core/config/: build.gradle.kts
core/ctags/: build.gradle.kts
core/debug/: build.gradle.kts
core/design/: build.gradle.kts
core/distro/: build.gradle.kts
core/distro/src/main/: AndroidManifest.xml
core/distro/src/main/assets/distro/: catalog.yaml
core/editor/: build.gradle.kts
core/editor-completion/: build.gradle.kts
core/editor-decor/: build.gradle.kts
core/ext/: build.gradle.kts
core/fs/: build.gradle.kts
core/lsp/: build.gradle.kts
core/resource/: build.gradle.kts
core/search/: build.gradle.kts
core/state/: build.gradle.kts
core/term/: build.gradle.kts
core/treesitter/: build.gradle.kts
core/vcs/: build.gradle.kts
docs/: java-debug-adapter-plan.md
feature/debug/: build.gradle.kts
feature/editor-pane/: build.gradle.kts
feature/explorer/: build.gradle.kts
feature/lsp-manager/: build.gradle.kts
feature/marketplace/: build.gradle.kts
feature/onboarding/: build.gradle.kts
feature/problems/: build.gradle.kts
feature/scm/: build.gradle.kts
feature/sdk-manager/: build.gradle.kts
feature/search/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/terminal-pane/: build.gradle.kts
gradle/: cargo.gradle.kts  libs.versions.toml
marketplace/: README.md  extension.yaml
marketplace/templates/aspnet-vite-react-ts/: template.yaml
native/: CMakeLists.txt
native/buffer/: build.gradle.kts
native/buffer/src/: highlight.cpp  highlight.h  jni_buffer.cpp  jni_highlight.cpp  piece_tree.cpp  piece_tree.h
native/buffer/src/main/java/dev/jcode/native/buffer/: BufferNativeModule.kt
native/common/: jcode_native_stub.c  jcode_tree_sitter_anchor.c
native/core/: build.gradle.kts
native/core/src/main/cpp/: config_service.cpp  config_service.h  edit_op.h  editor_state.cpp  editor_state.h  event_loop.cpp  event_loop.h  jni_bridge.cpp  jni_bridge.h  jni_config.cpp  jni_core.cpp  jni_editor_state.cpp  logger.cpp  logger.h  resource_manager.cpp  resource_manager.h  undo_manager.cpp  undo_manager.h
native/core/src/main/java/dev/jcode/native/core/: ConfigServiceNative.kt  CoreNativeModule.kt  EditorStateNative.kt  UndoManagerNative.kt
native/editor-render/: build.gradle.kts
native/editor-render/src/main/java/dev/jcode/native/editorrender/: EditorRenderNativeModule.kt
native/grammars/: CMakeLists.txt  build.gradle.kts
native/libgit2/: build.gradle.kts
native/libgit2/src/main/java/dev/jcode/native/libgit2/: Libgit2NativeModule.kt
native/proot/: CMakeLists.txt  build.gradle.kts
native/proot/libandroid-shmem/: README.md  shmem.c
native/proot/src/main/java/dev/jcode/native/proot/: ProotNativeModule.kt
native/pty/: build.gradle.kts
native/pty/src/: jni_pty.cpp  pty.cpp  pty.h
native/pty/src/main/java/dev/jcode/native/pty/: PtyNativeModule.kt
native/ripgrep-ffi/: build.gradle.kts
native/ripgrep-ffi/rust/: Cargo.toml
native/ripgrep-ffi/rust/src/: lib.rs
native/ripgrep-ffi/src/main/java/dev/jcode/native/ripgrepffi/: RipgrepFfiNativeModule.kt
native/tree-sitter/: build.gradle.kts
native/tree-sitter/src/: jni_treesitter.c
native/tree-sitter/src/main/java/dev/jcode/native/treesitter/: TreeSitterNativeModule.kt
native/vt/: build.gradle.kts
native/vt/src/: jni_vt.c  vt_parser.c  vt_parser.h
native/vt/src/main/java/dev/jcode/native/vt/: VtNativeModule.kt
native/wasmtime-ffi/: build.gradle.kts
native/wasmtime-ffi/rust/: Cargo.toml
native/wasmtime-ffi/rust/src/: lib.rs
native/wasmtime-ffi/src/main/java/dev/jcode/native/wasmtimeffi/: WasmtimeFfiNativeModule.kt
plans/: JCode_Plan 2.md  JCode_Verification 2.md
scripts/: build-release-common.sh  build-release-linux.sh  build-release-macos.sh  build-release.ps1  check-no-host-root.sh  install-git-hooks.sh
tools/java-dap/: README.md  build.gradle  settings.gradle
(+171 files in other folders)
